chore: update metadata

--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-
     <title>Boomerang Flow</title>
   </head>
 
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Whoops. You need to enable JavaScript to run this app.
     </noscript>
     <div id="app"></div>
+    <div hidden>
+      <span id="new-window-aria-desc-0">Opens in a new tab</span>
+    </div>
   </body>
 </html>
